force-app/main/default/objects/student__c/fields/Count_Of_Payments__c.field-meta.xml
<CustomField>
    <fullName>Count_Of_Payments__c</fullName>
    <label>Count Of Payments</label>
    <summaryForeignKey>Payment__c.student__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>