force-app/main/default/objects/student__c/fields/Gender_2__c.field-meta.xml
<CustomField>
    <fullName>Gender_2__c</fullName>
    <label>Gender 2</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Mr.</fullName>
                <default>true</default>
                <label>Mr.</label>
            </value>
            <value>
                <fullName>Ms.</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>