force-app/main/default/objects/student__c/fields/Last4clear__c.field-meta.xml
<CustomField>
    <fullName>Last4clear__c</fullName>
    <label>Last4clear</label>
    <length>10</length>
    <maskChar>X</maskChar>
    <maskType>lastFour</maskType>
    <type>EncryptedText</type>
</CustomField>