force-app/main/default/objects/student__c/fields/Mentor__c.field-meta.xml
<CustomField>
    <fullName>Mentor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mentor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Teacher__c.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Teacher__c</referenceTo>
    <relationshipLabel>students</relationshipLabel>
    <relationshipName>students</relationshipName>
    <type>Lookup</type>
</CustomField>