force-app/main/default/objects/student__c/fields/Parents__c.field-meta.xml
<CustomField>
    <fullName>Parents__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parents</label>
    <referenceTo>Parents__c</referenceTo>
    <relationshipLabel>students</relationshipLabel>
    <relationshipName>students</relationshipName>
    <type>Lookup</type>
</CustomField>