force-app/main/default/objects/student__c/fields/Profil_site__c.field-meta.xml
<CustomField>
    <fullName>Profil_site__c</fullName>
    <label>Profil site</label>
    <type>Url</type>
</CustomField>