force-app/main/default/objects/student__c/fields/Timefield__c.field-meta.xml
<CustomField>
    <fullName>Timefield__c</fullName>
    <label>Timefield</label>
    <type>Time</type>
</CustomField>